# caspernews

./: .gitignore  CONTRIBUTING.md  DEBRIEF.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_INFO.md  LICENSE  README.md  SESSION_SUMMARY.md  VERCEL_DEPLOYMENT.md  VERCEL_SETUP.md  deploy-testnet.sh  vercel.json
api/: casper-rpc.ts
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: server.ts
backend/src/routes/: api.ts
backend/src/services/: database.ts  eventStreaming.ts
contracts/: .gitignore  Cargo.toml  Odra.toml  deploy-direct.sh  deploy-final.js  deploy-simple.js  deploy-testnet.sh  deploy.js  deploy.py  package.json
contracts/src/: lib.rs  tests.rs  yield_optimizer.rs
contracts/wasm/: YieldOptimizer.wasm
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/api/: casper-rpc.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ActionPanel.tsx  Dashboard.tsx  Header.tsx  PositionHistory.tsx
frontend/src/config/: csprclick.ts
frontend/src/hooks/: useClickWallet.ts  useDeployStatus.ts  useDeployStatus.ts.bak  useTransaction.ts  useWallet.ts
frontend/src/services/: api.ts  casper.ts  casper.ts.bak
tutorial/01-introduction/: README.md
tutorial/02-frontend/: README.md
tutorial/03-transactions/: README.md
tutorial/04-smart-contracts/: README.md
tutorial/05-backend/: README.md
