[package]
name = "yield-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4", default-features = false }

[dev-dependencies]
odra-test = "2.4"

[build-dependencies]
odra-build = "2.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-cli = "2.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "yield_optimizer_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "yield_optimizer_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "yield_optimizer_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
